--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 
  <div class ="left-half">
-    <h1>Pokedex</h1>
+    <h1>Pokédex</h1>
     <img id="pokemon-image" src = "Mimikyu.png">
     <h2 id="pokemon-name">Mimikyu</h2>
     <p id="pokemon-type">Ghost, Fairy</p>
